--- a/public/views/article/list.ejs
+++ b/public/views/article/list.ejs
@@ -7,4 +7,6 @@
       <%= articles[i].user%>
     </p>
     <h3><%= articles[i].content%></h3>
+     </p>
+    <h3><%= articles[i].created%></h3>
     <% } %>
