--- a/public/views/article/view.ejs
+++ b/public/views/article/view.ejs
@@ -6,9 +6,9 @@
     <body>
         
         <h1>all articles views</h1>
-        <% console.log (request.article)%
-        <h2>  Title: <%request.article.title%></h2>
-        </p>  <% request.article.content % </p>
+        <% console.log (request.article)%>
+        <h2>  Title: <%=request.article.title%></h2>
+        </p>  <%= request.article.content %> </p>
     </body>
     
     
