--- a/public/views/article/all.ejs
+++ b/public/views/article/all.ejs
@@ -6,7 +6,16 @@
     <body>
         
         <h1>all articles</h1>
-        
+         <% for(var i=0; i<articles.length; i++) { %>
+    <h1> <%= articles[i]._id %> </h1>
+    <h1> <%= articles[i].title %> </h1>
+    <p>
+      <%= articles[i].user%>
+    </p>
+    <h3><%= articles[i].content%></h3>
+     </p>
+    <h3><%= articles[i].created%></h3>
+    <% } %>
     </body>
     
     
