--- a/public/views/article/edit.ejs
+++ b/public/views/article/edit.ejs
@@ -1,11 +1,11 @@
 <html>
     <head>
         
-        <title>all articles edited</title>
+        <title>all articles</title>
     </head>
     <body>
         
-        <h1>all articles edited</h1>
+        <h1>all articles</h1>
         
     </body>
     
