--- a/public/views/product/create.ejs
+++ b/public/views/product/create.ejs
@@ -19,6 +19,9 @@
          <div>Quantity:
               <input type="number" id="quantity"/>
         </div>
+          </div>
+         <div id="error"> 
+        </div>
         <button id="submit">Submit</button>
         
         <script src="/lib/jquery/dist/jquery.min.js"></script>
@@ -53,9 +56,14 @@
         ).done(function(response){
         
         console.log(response);
+         window.location.replace("/products/"+response._id);
+        
+        }).fail(function(response){
+        
+          $("#error").text(JSON.parse(response.responseText).message);
+        console.log(JSON.parse(response.responseText).message);
         
         });
-        
         });
         </script>
         
