--- a/public/views/article/create.ejs
+++ b/public/views/article/create.ejs
@@ -38,6 +38,7 @@
         ).done(function(response){
         
         console.log(response);
+            window.location.replace("/products/"+response._id);
         
         });
         
