--- a/public/views/article/create.ejs
+++ b/public/views/article/create.ejs
@@ -40,7 +40,8 @@
         console.log(response);
             window.location.replace("/products/"+response._id);
         
-        });
+        }).fail(function(response))
+        console.log
         
         });
         </script>
