--- a/public/views/product/edit.ejs
+++ b/public/views/product/edit.ejs
@@ -26,7 +26,7 @@
         var productId= <%- JSON.stringify(request.product._id) %>;
         var product = {};
         
-        var product={name: "",description: ""};
+ 
         $("#name").change(function()
         {
         product.name=$("#name").val();
@@ -44,28 +44,29 @@
         });
          $("#quantity").change(function()
         {
-        product. quantity=$("#quantity").val();
+        product.quantity=$("#quantity").val();
         
         });
         $("#submit").click(function(){
             console.log("test");
         $.ajax({
         method: "PUT",
-        url: "/api/products/edit/"+productId,data:product},
+        url: "/api/products/edit/"+productId,
         data: product
         
-        ).done(function(response){
+        }).done(function(response){
         
         console.log(response);
         
         window.location.replace("/products/"+response._id);
         
         
-        }).fail(function(response)){
+        }).fail(function(response){
             
         $("#error").text(JSON.parse(response.responseText).message);
         console.log(JSON.parse(response.responseText).message);
         
+        });
         });
         </script>
         
